set the avatarUrl to 100 px instead of 300 in navbar

--- a/public/css/account.css
+++ b/public/css/account.css
@@ -82,6 +82,10 @@ div.user-menu-container .thumbnail {
     border-radius: 0px!important;
 }
 
+.body > footer > div {
+    margin-bottom: 0;
+}
+
 /* -- media query for user profile image -- */
 @media (max-width: 767px) {
     .user-image {
